--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -24,7 +24,7 @@ $indigo:          hsl(231, 48%, 48%);
 $theme-link:                       hsl(199, 92%, 45%);
 $theme-sidebar:                    hsl(213, 26%, 13%);
 $theme-sidebar-link-active:        hsl(199, 92%, 64%);
-$theme-page-header:                hsl(210, 33%, 96%);
+$theme-page-header:                hsl(0, 0%, 100%);
 
 //
 // Defined Colors
